# RichPresenceWUPS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  README.md  discord-script.py  main.cpp
discord/: CMakeLists.txt  README.md  app.rc  build.bat  build.sh  main.cpp  old main.cpp  run.bat
discord/src/: CMakeLists.txt  common.hpp  main.cpp  unix.hpp  win.hpp
src/: main.cpp
src/platform/: unix.hpp  windows.cpp
wiiu/: Makefile  README.md
wiiu/src/: main.cpp
